some more changes

--- a/partials/input.html
+++ b/partials/input.html
@@ -1,1 +1,5 @@
-<h2>Enter a palindrome</h2>
+<h1>Fun with Palindromes!</h1>
+<h3>Enter a word below. Click submit to see if it's a palindrome.</h3>
+
+<input ng-model="checkPalindrome"></input>
+<button ng-click="getPalindrome()">Submit</button>
