--- a/partials/output.html
+++ b/partials/output.html
@@ -1,1 +1,4 @@
-{{word}}
+<h2>Your entry is {{word}}!</h2>
+
+<p>True: Your word is a palindrome! Nicely done.</p>
+<p>False: Sorry, your word is not a palindrome. Try again.</p>
