--- a/partials/home-apiOutput.html
+++ b/partials/home-apiOutput.html
@@ -1,5 +1,1 @@
-<quote ng-repeat="post in posts"></quote>
-<section class="quote">
-	<h3>{{data.data.quote}}</h3>
-	<h2>{{data.data.author}}</h2>
-</section>
+<quote></quote>
