--- a/partials/home.html
+++ b/partials/home.html
@@ -1,9 +1,8 @@
 <div class="jumbotron text-center">
-    <h1>Welcome to our cool app!</h1>
+    <h1>Fun with Words!</h1>
     
     <a ui-sref=".input" class="btn btn-primary">Enter a Palindrome</a>
     <a ui-sref=".api" class="btn btn-success">Generate Random Famous Quotes</a>
-    <a ui-sref=".paragraph" class="btn btn-danger">Paragraph</a>
 </div>
 
 <div ui-view></div>
