--- a/partials/quote.html
+++ b/partials/quote.html
@@ -1,4 +1,4 @@
 <section class="quote">
-	<h3>{{quotes}}</h3>
-	<h2>{{author}}</h2>
+	<h2 class="text-center">{{quotes}}</h2>
+	<h3 class="text-center">{{author}}</h3>
 </section>
