--- a/partials/home-input.html
+++ b/partials/home-input.html
@@ -1,9 +1,9 @@
-<h1>Fun with Palindromes!</h1>
+<h1>Check for Palindromes!</h1>
 <h3>Enter a word below. Click submit to see if it's a palindrome.</h3>
 
 <input ng-model="checkPalindrome"></input>
 <button ng-click="getPalindrome()">Submit</button>
 
-<!--<h2>Your entry is {{word}}!</h2>
+<h4>If your answer is...</h4>
 <p>True: Your word is a palindrome! Nicely done.</p>
-<p>False: Sorry, your word is not a palindrome. Try again.</p>-->
+<p>False: Sorry, your word is not a palindrome. Try again.</p>
